--- a/.gitignore
+++ b/.gitignore
@@ -8,6 +8,7 @@
 
 # Node
 /node_modules
+/src/environments/*.ts
 npm-debug.log
 yarn-error.log
 
@@ -19,8 +20,6 @@ yarn-error.log
 *.launch
 .settings/
 *.sublime-workspace
-/src/environments/environment.ts
-/src/environments/environments.prod.ts.ts
 # Visual Studio Code
 .vscode/*
 !.vscode/settings.json
